--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,8 +10,9 @@ html{
     min-height: 100%;
 }
 
+
 main{
-    margin-bottom: 315px;
+    margin-bottom: 355px;
 }
 
 footer.footer{
@@ -20,3 +21,13 @@ footer.footer{
     bottom: 0;
     width: 100%;
 }
+
+p{
+    font-family: $font-family-serif;
+    font-size: 18px;
+}
+
+h1{
+    font-family: $font-family-sans-serif;
+}
+
