--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,7 @@ html{
 
 
 main{
-    margin-bottom: 355px;
+    margin-bottom: 430px;
 }
 
 footer.footer{
@@ -30,4 +30,27 @@ p{
 h1{
     font-family: $font-family-sans-serif;
 }
+.image-card{
+    position:relative;
+    &:hover{
+        .titre-image{
+            opacity: 1;
+        }
+        img{
+            filter: brightness(0.3);
+        }
+    }
 
+    img{
+        transition: all 0.3s;
+    }
+
+    .titre-image{
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        transition: all 0.3s;
+    }
+}
