Ajout page habitats

--- a/scss/main.css
+++ b/scss/main.css
@@ -11999,4 +11999,9 @@ h2, .h2 {
   transform: translate(-50%, -50%);
   opacity: 0;
   transition: all 0.3s;
+}
+
+#longeur {
+  min-height: 1000px;
+  padding-bottom: 0;
 }/*# sourceMappingURL=main.css.map */
