--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,6 +35,7 @@ h1{
 h2{
     font-family: $font-family-serif;
     font-size: 18px;
+    padding: 3px;
 }
 
 .image-card{
@@ -65,4 +66,20 @@ h2{
 #longeur{
     min-height: 1000px;
     padding-bottom: 0;
+}
+
+.form-label{
+    color: $secondary;
+    font-family: $font-family-serif;
+    font-size: 16px;
+}
+.btn-primary{
+    font-family: $font-family-serif;
+    font-size: 16px;
+}
+
+.hero-scene{
+    position: relative;
+    height: 100%;
+    width: ;
 }
